--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.15.0"
   },
@@ -32,7 +33,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.2",
-    "ts-node-dev": "^2.0.0"
+    "mongoose": "^8.8.2"
   }
 }
