--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "eslint": "^9.14.0",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
