--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
@@ -36,6 +37,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-status": "^2.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "zod": "^3.23.8"
   }
